--- a/prototype/scripts/build
+++ b/prototype/scripts/build
@@ -13,6 +13,7 @@ cd ..
 cat "vendor/zepto.min.js"   \
     "zepto.eof.txt"         \
     "vendor/ejohn-class.js" \
+    "system.js"             \
     "bin/atomos-bin.js"     \
     "hx/atomos-hx.js"       \
     "main.js"               \
