--- a/prototype/scripts/hx/build
+++ b/prototype/scripts/hx/build
@@ -7,6 +7,7 @@ cat "class.js"           \
     "stream.js"          \
     "file.js"            \
     "jsfs.js"            \
+    "process.js"         \
     "wash.js"            \
     "panel.js"           \
     "test.js"            \
