basic console window, /bin/* updated with stdin/stdout/stderr refs

--- a/prototype/scripts/hx/build
+++ b/prototype/scripts/hx/build
@@ -10,5 +10,7 @@ cat "class.js"           \
     "process.js"         \
     "wash.js"            \
     "panel.js"           \
+    "window.js"          \
+    "commandwindow.js"   \
     "test.js"            \
   > "atomos-hx.js"
