new wash commands, temporary ui, file editor, various fixes (bulk update)

--- a/prototype/scripts/bin/build
+++ b/prototype/scripts/bin/build
@@ -2,7 +2,16 @@
 
 cat "cat.js"            \
     "cd.js"             \
+    "clear.js"          \
+    "commands.js"       \
     "echo.js"           \
+    "edit.js"           \
+    "help.js"           \
     "ls.js"             \
+    "mkdir.js"          \
     "pwd.js"            \
+    "rm.js"             \
+    "rmdir.js"          \
+    "touch.js"          \
+    "wallpaper.js"      \
   > "atomos-bin.js"
