--- a/prototype/scripts/build
+++ b/prototype/scripts/build
@@ -18,3 +18,5 @@ cat "vendor/zepto.min.js"   \
     "hx/atomos-hx.js"       \
     "main.js"               \
   > "atomos.js"
+
+uglifyjs -o atomos.min.js atomos.js
