--- a/prototype/scripts/bin/build
+++ b/prototype/scripts/bin/build
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-echo "- concat"
+echo "- merging wash commands"
 cat "cat.js"            \
     "cd.js"             \
     "clear.js"          \
@@ -18,22 +18,27 @@ cat "cat.js"            \
   > "atomos-bin.js"
 
 #docs
-echo "- docs"
 DOCNGN=`which jsdog`
-DOCDIR="../docs/wash-commands"
-DOCTMPL="-m ../docs/jsdog.jade"
 
-$DOCNGN $DOCTMPL -s cat.js       -t t/cat.js       > $DOCDIR/cat.html
-$DOCNGN $DOCTMPL -s cd.js        -t t/cd.js        > $DOCDIR/cd.html
-$DOCNGN $DOCTMPL -s clear.js     -t t/clear.js     > $DOCDIR/clear.html
-$DOCNGN $DOCTMPL -s commands.js  -t t/commands.js  > $DOCDIR/commands.html
-$DOCNGN $DOCTMPL -s echo.js      -t t/echo.js      > $DOCDIR/echo.html
-$DOCNGN $DOCTMPL -s edit.js      -t t/edit.js      > $DOCDIR/edit.html
-$DOCNGN $DOCTMPL -s help.js      -t t/help.js      > $DOCDIR/help.html
-$DOCNGN $DOCTMPL -s ls.js        -t t/ls.js        > $DOCDIR/ls.html
-$DOCNGN $DOCTMPL -s mkdir.js     -t t/mkdir.js     > $DOCDIR/mkdir.html
-$DOCNGN $DOCTMPL -s pwd.js       -t t/pwd.js       > $DOCDIR/pwd.html
-$DOCNGN $DOCTMPL -s rmdir.js     -t t/rmdir.js     > $DOCDIR/rmdir.html
-$DOCNGN $DOCTMPL -s rm.js        -t t/rm.js        > $DOCDIR/rm.html
-$DOCNGN $DOCTMPL -s touch.js     -t t/touch.js     > $DOCDIR/touch.html
-$DOCNGN $DOCTMPL -s wallpaper.js -t t/wallpaper.js > $DOCDIR/wallpaper.html
+if [ -n "$DOCNGN" ]
+then
+    echo "  - building documentation and unit tests"
+
+    DOCDIR="../docs/wash-commands"
+    DOCTMPL="-m ../docs/jsdog.jade"
+
+    $DOCNGN $DOCTMPL -s cat.js       -t t/cat.js       > $DOCDIR/cat.html
+    $DOCNGN $DOCTMPL -s cd.js        -t t/cd.js        > $DOCDIR/cd.html
+    $DOCNGN $DOCTMPL -s clear.js     -t t/clear.js     > $DOCDIR/clear.html
+    $DOCNGN $DOCTMPL -s commands.js  -t t/commands.js  > $DOCDIR/commands.html
+    $DOCNGN $DOCTMPL -s echo.js      -t t/echo.js      > $DOCDIR/echo.html
+    $DOCNGN $DOCTMPL -s edit.js      -t t/edit.js      > $DOCDIR/edit.html
+    $DOCNGN $DOCTMPL -s help.js      -t t/help.js      > $DOCDIR/help.html
+    $DOCNGN $DOCTMPL -s ls.js        -t t/ls.js        > $DOCDIR/ls.html
+    $DOCNGN $DOCTMPL -s mkdir.js     -t t/mkdir.js     > $DOCDIR/mkdir.html
+    $DOCNGN $DOCTMPL -s pwd.js       -t t/pwd.js       > $DOCDIR/pwd.html
+    $DOCNGN $DOCTMPL -s rmdir.js     -t t/rmdir.js     > $DOCDIR/rmdir.html
+    $DOCNGN $DOCTMPL -s rm.js        -t t/rm.js        > $DOCDIR/rm.html
+    $DOCNGN $DOCTMPL -s touch.js     -t t/touch.js     > $DOCDIR/touch.html
+    $DOCNGN $DOCTMPL -s wallpaper.js -t t/wallpaper.js > $DOCDIR/wallpaper.html
+fi
