add DOCS envvar for buildind docs/unit tests, start on proc filesystem

--- a/prototype/scripts/bin/build
+++ b/prototype/scripts/bin/build
@@ -20,7 +20,7 @@ cat "cat.js"            \
 #docs
 DOCNGN=`which jsdog`
 
-if [ -n "$DOCNGN" ]
+if [ -n "$DOCS" ] && [ -n "$DOCNGN" ]
 then
     echo "  - building documentation and unit tests"
 
