start on devices, partial tcl support

--- a/prototype/scripts/bin/build
+++ b/prototype/scripts/bin/build
@@ -13,6 +13,7 @@ cat "cat.js"            \
     "pwd.js"            \
     "rm.js"             \
     "rmdir.js"          \
+    "tcl.js"            \
     "touch.js"          \
     "wallpaper.js"      \
   > "atomos-bin.js"
