--- a/prototype/scripts/hx/build
+++ b/prototype/scripts/hx/build
@@ -8,9 +8,11 @@ cat "class.js"           \
     "stream.js"          \
     "file.js"            \
     "device.js"          \
+    "remotefile.js"      \
     "jsfs.js"            \
     "procfs.js"          \
     "domfs.js"           \
+    "netfs.js"           \
     "process.js"         \
     "wash.js"            \
     "tcl.js"             \
@@ -30,16 +32,18 @@ then
     DOCDIR="../docs/classes"
     DOCTMPL="-m ../docs/jsdog.jade"
 
-    $DOCNGN $DOCTMPL -s class.js   -t t/class.js   > $DOCDIR/class.html
-    $DOCNGN $DOCTMPL -s guid.js    -t t/guid.js    > $DOCDIR/guid.html
-    $DOCNGN $DOCTMPL -s bus.js     -t t/bus.js     > $DOCDIR/bus.html
-    $DOCNGN $DOCTMPL -s stream.js  -t t/stream.js  > $DOCDIR/stream.html
-    $DOCNGN $DOCTMPL -s file.js    -t t/file.js    > $DOCDIR/file.html
-    $DOCNGN $DOCTMPL -s device.js  -t t/device.js  > $DOCDIR/device.html
-    $DOCNGN $DOCTMPL -s jsfs.js    -t t/jsfs.js    > $DOCDIR/jsfs.html
-    $DOCNGN $DOCTMPL -s domfs.js   -t t/domfs.js   > $DOCDIR/domfs.html
-    $DOCNGN $DOCTMPL -s process.js -t t/process.js > $DOCDIR/process.html
-    $DOCNGN $DOCTMPL -s wash.js    -t t/wash.js    > $DOCDIR/wash.html
+    $DOCNGN $DOCTMPL -s class.js      -t t/class.js      > $DOCDIR/class.html
+    $DOCNGN $DOCTMPL -s guid.js       -t t/guid.js       > $DOCDIR/guid.html
+    $DOCNGN $DOCTMPL -s bus.js        -t t/bus.js        > $DOCDIR/bus.html
+    $DOCNGN $DOCTMPL -s stream.js     -t t/stream.js     > $DOCDIR/stream.html
+    $DOCNGN $DOCTMPL -s file.js       -t t/file.js       > $DOCDIR/file.html
+    $DOCNGN $DOCTMPL -s device.js     -t t/device.js     > $DOCDIR/device.html
+    $DOCNGN $DOCTMPL -s remotefile.js -t t/remotefile.js > $DOCDIR/remotefile.html
+    $DOCNGN $DOCTMPL -s jsfs.js       -t t/jsfs.js       > $DOCDIR/jsfs.html
+    $DOCNGN $DOCTMPL -s domfs.js      -t t/domfs.js      > $DOCDIR/domfs.html
+    $DOCNGN $DOCTMPL -s netfs.js      -t t/netfs.js      > $DOCDIR/netfs.html
+    $DOCNGN $DOCTMPL -s process.js    -t t/process.js    > $DOCDIR/process.html
+    $DOCNGN $DOCTMPL -s wash.js       -t t/wash.js       > $DOCDIR/wash.html
     $DOCNGN $DOCTMPL -s panel.js   -t t/panel.js   > $DOCDIR/panel.html
     $DOCNGN $DOCTMPL -s window.js  -t t/window.js  > $DOCDIR/window.html
 
